# effecthandlers-logging

./: .gitignore  README.md  flake.nix  pyproject.toml
effecthandlers_logging/: __init__.py  logging.py
