[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "effecthandlers-logging"
dynamic = ["version"]
requires-python = ">=3.10"
dependencies = [
  "ansicolors",
  "attrs",
  "effecthandlers @ git+https://github.com/ludvb/effecthandlers",
  "pendulum",
]

[tool.setuptools.dynamic]
version = {attr = "effecthandlers_logging.__version__.__version__"}

[tool.isort]
profile = "black"
multi_line_output = 3
skip = "__init__.py"
